--- a/kitchen-backend/package.json
+++ b/kitchen-backend/package.json
@@ -24,6 +24,7 @@
     "express": "^4.21.2",
     "mongoose": "^8.11.0",
     "morgan": "^1.10.0",
+    "openai": "^4.86.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
