--- a/kitchen-backend/.env.example
+++ b/kitchen-backend/.env.example
@@ -12,3 +12,9 @@ OPENAI_API_KEY=sk-proj-...
 
 # CORS Configuration
 CORS_ORIGINS=["http://localhost:5173"]
+
+# JWT Authentication
+JWT_SECRET=your-secret-key-here-generate-with-openssl-rand-hex-32
+
+# Google OAuth (optional - only needed for "Sign in with Google")
+GOOGLE_CLIENT_ID=123456789.apps.googleusercontent.com
