--- a/kitchen-backend/pyproject.toml
+++ b/kitchen-backend/pyproject.toml
@@ -11,6 +11,9 @@ dependencies = [
     "pydantic-settings>=2.1.0",
     "openai>=1.0.0",
     "python-dotenv>=1.0.0",
+    "python-jose[cryptography]>=3.3.0",
+    "passlib[bcrypt]>=1.7.4",
+    "httpx>=0.26.0",
 ]
 
 [project.optional-dependencies]
