Add frontend google oauth flow

--- a/kitchen-backend/.env.example
+++ b/kitchen-backend/.env.example
@@ -16,5 +16,5 @@ CORS_ORIGINS=["http://localhost:5173"]
 # JWT Authentication
 JWT_SECRET=your-secret-key-here-generate-with-openssl-rand-hex-32
 
-# Google OAuth (optional - only needed for "Sign in with Google")
-GOOGLE_CLIENT_ID=123456789.apps.googleusercontent.com
+# Google OAuth
+GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
