--- a/kitchen-frontend/package.json
+++ b/kitchen-frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/lab": "^6.0.0-beta.29",
     "@mui/material": "^6.4.5",
+    "@react-oauth/google": "^0.13.4",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "react": "^19.0.0",
