Add recipe image upload with Google Cloud Storage

--- a/kitchen-backend/.env.example
+++ b/kitchen-backend/.env.example
@@ -18,3 +18,7 @@ JWT_SECRET=your-secret-key-here-generate-with-openssl-rand-hex-32
 
 # Google OAuth
 GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
+
+# Google Cloud Storage Configuration
+GCS_BUCKET_NAME=your-bucket-name
+GCS_CREDENTIALS_FILE=/path/to/your/file/sumans-kitchen-service-account.json
