--- a/kitchen-backend/pyproject.toml
+++ b/kitchen-backend/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "httpx>=0.26.0",
     "email-validator>=2.0.0",
     "python-multipart>=0.0.9",
+    "google-cloud-storage>=2.14.0",
 ]
 
 [project.optional-dependencies]
