--- a/kitchen-backend/pyproject.toml
+++ b/kitchen-backend/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "email-validator>=2.0.0",
     "python-multipart>=0.0.9",
     "google-cloud-storage>=2.14.0",
+    "pillow>=10.0.0",
 ]
 
 [project.optional-dependencies]
